cabal-version:      2.4
name:               hooglite
version:            0.20230131
license:            BSD-3-Clause
license-file:       LICENSE
category:           Development
synopsis:           A lite implementation of hoogle
description:
  This is like hoogle, but is smaller, containing only core functionality.
  Uses @ghc-lib-parser@ for parsing.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
build-type:         Simple
tested-with:        GHC ==9.2.5
extra-source-files: test-data/*.txt

source-repository head
  type:     git
  location: https://github.com/phadej/hooglite.git

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:     src

  -- GHC-boot libraries
  build-depends:
    , base        ^>=4.16.3.0
    , bytestring  ^>=0.11.3.1
    , containers  ^>=0.6.5.1
    , pretty      ^>=1.1.3.6

  -- Cabal is special
  build-depends:      Cabal ^>=3.8.1.0

  -- rest of the dependencies
  build-depends:
    , bifunctors         ^>=5.5.11
    , edit-distance      ^>=0.2.2.1
    , fin                ^>=0.2.1
    , ghc-lib-parser     ^>=9.4.4.20221225
    , ghc-lib-parser-ex  ^>=9.4.0.0
    , mtl                ^>=2.2.2
    , text-short         ^>=0.1.5
    , unification-fd     ^>=0.11.1

  -- Main module
  exposed-modules:    Hooglite
  exposed-modules:
    Hooglite.Database
    Hooglite.Declaration
    Hooglite.GHC.Utils
    Hooglite.Haddock
    Hooglite.Query
    Hooglite.Ty

  exposed-modules:
    Hooglite.MonoPoly
    Hooglite.MonoPoly.Name
    Hooglite.MonoPoly.Pretty
    Hooglite.MonoPoly.Var

  cpp-options:        -DSAFE
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications

test-suite hooglite-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:   test
  main-is:          hooglite-tests.hs
  other-modules:
    Hooglite.Test.Database
    Hooglite.Test.Haddock
    Hooglite.Test.Query

  build-depends:
    , base
    , Cabal
    , containers
    , hooglite
    , mtl

  build-depends:
    , tasty         ^>=1.4.2.1
    , tasty-golden  ^>=2.3.4
    , tasty-hunit   ^>=0.10.0.3
