cabal-version:      2.4
name:               debruijn
version:            0.20230131
license:            BSD-3-Clause
license-file:       LICENSE
category:           Development
synopsis:           de Bruijn indices and levels
description:
  de Bruijn indices and levels for well-scoped terms.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
build-type:         Simple
tested-with:        GHC ==9.2.5

source-repository head
  type:     git
  location: https://github.com/phadej/debruijn.git

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:     src

  -- GHC-boot libraries
  build-depends:
    , base        ^>=4.16.3.0
    , bytestring  ^>=0.11.3.1
    , containers  ^>=0.6.5.1
    , pretty      ^>=1.1.3.6

  -- rest of the dependencies
  build-depends:  
    , fin                ^>=0.2.1

  exposed-modules:
    DeBruijn
    DeBruijn.Ctx
    DeBruijn.Idx
    DeBruijn.Env
    DeBruijn.Renaming
    DeBruijn.Size
    DeBruijn.Lvl

  cpp-options:        -DSAFE
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
